// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballStandings should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-htpNat sc-bxivhb hVjWop"
    />
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballStandings should render correctly, with columns 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-htpNat sc-bxivhb djNqWV"
    />
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
